updated EnemySpawner and added player